--- a/app/templates/app/root.html
+++ b/app/templates/app/root.html
@@ -25,7 +25,7 @@
     </h1>
 
     <div class="row">
-        <form action = "https://league-ynk.herokuapp.com/" method = "POST">
+        <form action = "/" method = "POST">
             <div class="form-row">
                 <div class="col">
                     <label class="label-important">
