items does not exist in this context.
You could just remove items, It's not needed in this context.

--- a/app/templates/app/root.html
+++ b/app/templates/app/root.html
@@ -85,7 +85,7 @@
 
                 <p class="h6">
                     <u>Champions</u>: <u> Number of Matches</u> <br/>
-                    {% for key, value in result['champions'].items() %}
+                    {% for key, value in result['champions'] %}
                        <b>{{ key }}</b>: {{ value }} <br/>
                 </p>
                 {% endfor %}
