removed the url configuration. back to previous version

--- a/app/templates/app/root.html
+++ b/app/templates/app/root.html
@@ -28,7 +28,7 @@
     </p>
 
     <div class="row">
-        <form action = "/lookup" method = "POST">
+        <form action = "/" method = "POST">
             <div class="form-row">
                 <div class="col">
                     <label class="label-important">
