Html and readme tweaked

--- a/app/templates/app/root.html
+++ b/app/templates/app/root.html
@@ -98,8 +98,10 @@
     </div>
     <div class="footer">
         <p align="center">
-            With <3 from ynk! <br>
-            <a target="_blank" rel="noopener noreferrer" href="https://github.com/ibtehaz-shawon">p1r_a_te</a> was here too.
+            With ❤️ from <a target="_blank" rel="noopener noreferrer" href="https://github.com/YannickDC">ynk</a>! <br>
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/ibtehaz-shawon">p1r_a_te</a> was here too.<br>
+			Feel free to join our <a target="_blank" rel="noopener noreferrer" href="https://discordapp.com/invite/gweJvhp">Discord</a> server for any questions. 
+			
         </p>
     </div>
 </body>
