--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    {% block head %}
-         <title>{% block title %}{% endblock %}</title>
+    <meta charset="UTF-8"> {% block head %}
+    <title>{% block title %}{% endblock %}</title>
     {% endblock %}
-    <meta name="p:domain_verify" content="f7ef92c6141b546a0c40c971e3e7f092"/>
+    <meta name="p:domain_verify" content="f7ef92c6141b546a0c40c971e3e7f092" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Bitter|Cormorant+Garamond|Righteous|IBM+Plex+Serif|Neuton" rel="stylesheet">
@@ -19,7 +19,9 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
+
 <body class="bodyclass">
- {% block body %}{% endblock %}
+    {% block body %}{% endblock %}
 </body>
+
 </html>
