--- a/app/templates/app/root.html
+++ b/app/templates/app/root.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    {% block head %}
-         <title>League Champion Fetcher</title>
+    <meta charset="UTF-8"> {% block head %}
+    <title>League Champion Fetcher</title>
     {% endblock %}
-    <meta name="p:domain_verify" content="f7ef92c6141b546a0c40c971e3e7f092"/>
+    <meta name="p:domain_verify" content="f7ef92c6141b546a0c40c971e3e7f092" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Bitter|Cormorant+Garamond|Righteous|IBM+Plex+Serif|Neuton" rel="stylesheet">
@@ -19,6 +19,7 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
+
 <body class="container">
     <p class="h1" align="center">
         League Champion Fetcher
@@ -28,7 +29,7 @@
     </p>
 
     <div class="row">
-        <form action = "/" method = "POST">
+        <form action="/" method="POST">
             <div class="form-row">
                 <div class="col">
                     <label class="label-important">
@@ -56,53 +57,48 @@
                 </select>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+        </form>
     </div>
     <hr/>
     <div>
-        {% if result %}
-            {% if 'status' in result %}
-                {% if result['status'] != 200 %}
-                    <p class="display-4">
-                        Error occurred!
-                    </p>
-                    <blockquote class="blockquote">
-                        <p class="mb-0">
-                            {{ result['message'] }}
-                        </p>
-                    </blockquote>
-                {% else %}
-                <p class="h5">
-                    Account Name: <b>{{ result['account_name'] }} </b> <br>
-                    Server: <b>{{ result['server'] }}</b> <br>
-                    Total Games: <b>{{ result['total_games'] }}</b> <br>
-                    Total Champions: <b>{{ result['total_champions'] }}</b> <br>
-                </p>
-                <hr/>
-                <p class="h6">
-                <table class="table">
-                    <tr class="popover-title">
-                      <th>Champion</th>
-                      <th>Number of Matches</th>
-                    </tr>
+        {% if result %} {% if 'status' in result %} {% if result['status'] != 200 %}
+        <p class="display-4">
+            Error occurred!
+        </p>
+        <blockquote class="blockquote">
+            <p class="mb-0">
+                {{ result['message'] }}
+            </p>
+        </blockquote>
+        {% else %}
+        <p class="h5">
+            Account Name: <b>{{ result['account_name'] }} </b> <br> Server: <b>{{ result['server'] }}</b> <br> Total Games: <b>{{ result['total_games'] }}</b> <br> Total Champions: <b>{{ result['total_champions'] }}</b> <br>
+        </p>
+        <hr/>
+        <p class="h6">
+            <table class="table">
+                <tr class="popover-title">
+                    <th>Champion</th>
+                    <th>Number of Matches</th>
+                </tr>
 
-                    {% for key, value in result['champions'] %}
+                {% for key, value in result['champions'] %}
 
-                       <tr class="popover-content"><td>{{ key }}</td><td>{{ value }}</td></tr>
+                <tr class="popover-content">
+                    <td>{{ key }}</td>
+                    <td>{{ value }}</td>
+                </tr>
                 {% endfor %}
-                    </table>
-                <hr/>
-                {% endif %}
-            {% endif %}
-        {% endif %}
+            </table>
+            <hr/> {% endif %} {% endif %} {% endif %}
     </div>
     <div class="footer">
         <p align="center">
             With ❤️ from <a target="_blank" rel="noopener noreferrer" href="https://github.com/YannickDC">ynk</a>! <br>
-            <a target="_blank" rel="noopener noreferrer" href="https://github.com/ibtehaz-shawon">p1r_a_te</a> was here too.<br>
-			Feel free to join our <a target="_blank" rel="noopener noreferrer" href="https://discordapp.com/invite/gweJvhp">Discord</a> server for any questions. 
-			
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/ibtehaz-shawon">p1r_a_te</a> was here too.<br> Feel free to join our <a target="_blank" rel="noopener noreferrer" href="https://discordapp.com/invite/gweJvhp">Discord</a>            server for any questions.
+
         </p>
     </div>
 </body>
+
 </html>
