Adding level to display

--- a/app/templates/app/root.html
+++ b/app/templates/app/root.html
@@ -75,7 +75,8 @@
         {% else %}
         <p class="h5">
             Account Name: <b>{{ result['account_name'] }} </b> <br>
-            Server: <b>{{ result['server'] }}</b> <br> 
+            Level: <b>{{ result['level'] }}</b> <br>
+            Server: <b>{{ result['server'] }}</b> <br>
             Total Games: <b>{{ result['total_games'] }}</b> <br> 
             Total Champions: <b>{{ result['total_champions'] }}</b> <br>
         </p>
