Small tweak to code. Little CSS updates.

--- a/app/templates/app/root.html
+++ b/app/templates/app/root.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Bitter|Cormorant+Garamond|Righteous|IBM+Plex+Serif|Neuton" rel="stylesheet">
     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crete+Round|Darker+Grotesque|Sanchez&display=swap"
+
         rel="stylesheet">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -27,7 +29,7 @@
         League Champion Fetcher
     </p>
     <p align="center">
-        <small class="text-muted small-stuff"> v0.0.2-alpha</small>
+        <small class="text-muted small-stuff">v0.0.2-alpha</small>
     </p>
 
     <div class="row">
@@ -80,7 +82,6 @@
             Total Games: <b>{{ result['total_games'] }}</b> <br> 
             Total Champions: <b>{{ result['total_champions'] }}</b> <br>
         </p>
-        <hr/>
         <p class="h6">
             <table class="table">
                 <tr class="popover-title">
